refactor: migrate dashboard

--- a/packages/mask/shared-ui/locale/en-US.json
+++ b/packages/mask/shared-ui/locale/en-US.json
@@ -1,1 +1,161 @@
-{ "messages": { "3B4jmY": "Data correlation" } }
+{
+    "messages": {
+        "lKldOY": "12-word recovery phrase is used to recover your persona data.",
+        "6c6xyD": "accounts",
+        "Du6bPw": "Address",
+        "+XyQiK": "Agree",
+        "BPhVLF": "Allow us to collect your usage information to help us make improvements.",
+        "2jQko7": "Associated Accounts",
+        "CEk7Nc": "At least 6 characters",
+        "iH8pgl": "Back",
+        "rLgPvm": "Backup",
+        "27uZ2B": "Backup downloaded and merged to local failed.",
+        "QrHM/A": "Backup downloaded and merged to local successfully.",
+        "zp7Ha3": "Backup Failed",
+        "GExRUL": "Backup password",
+        "NloaHG": "Backup Password",
+        "fGiGY1": "Backup to Cloud",
+        "7Ry254": "Backup to Mask Cloud Service",
+        "dEgA5A": "Cancel",
+        "ShHV7X": "Cloud Backup",
+        "qqWcBV": "Completed",
+        "7VpPHA": "Confirm",
+        "EwiD7E": "Confirm Payment Password",
+        "fsUPaG": "Congratulations",
+        "gVfVfe": "Contacts",
+        "xGVfLh": "Continue",
+        "hYgDIe": "Create",
+        "LJkXYZ": "Create New Mask Identity",
+        "PjBWOL": "Create your persona to get started",
+        "WgawP2": "Creating your",
+        "Sp/me1": "data",
+        "3B4jmY": "Data correlation",
+        "89K/8v": "Data merged from Mask Cloud Service to local successfully. Re-enter password to encrypt and upload backup to Mask Cloud Service.",
+        "oe5xh9": "Decrypt failed, please check password",
+        "DPfwMq": "Done",
+        "1vSYsG": "Download backup",
+        "1+6BOG": "Download Backup",
+        "xsX27i": "Download link is expired",
+        "9hg9mc": "Downloading",
+        "5Sa1Ss": "E-mail",
+        "O3oNi5": "Email",
+        "5e22kj": "Email verification code",
+        "MRIXE3": "Encrypting your",
+        "pi+hn/": ["Ethereum ", ["HD_PATH_WITHOUT_INDEX_ETHEREUM"]],
+        "Nzm8dm": "Example: Alice",
+        "cm4E8+": "Experience in X",
+        "J2eKUI": "File",
+        "tdZPpe": "Generating your",
+        "76gPWk": "Got it",
+        "oAHd4H": "I wrote down the words in the correct order",
+        "b5d759": "identity",
+        "RRw7LE": "Identity ID",
+        "l3s5ri": "Import",
+        "bapItf": "Incorrect Backup Password.",
+        "bassMa": "Incorrect cloud backup password, please try again.",
+        "dajsth": "Incorrect Keystore Password.",
+        "u948QG": "Incorrect Mnemonic Phrase Words.",
+        "+uISZO": "Incorrect Password",
+        "pjrgRd": "Incorrect Private Key",
+        "gdnEab": "Incorrect recovery phrase.",
+        "acK3j2": "Input your Private Key",
+        "9iZ9fH": "Invalid email address format.",
+        "BakBNJ": "Invalid phone number, please check and try again.",
+        "I4caYo": "Invalid verification code.",
+        "IBAx3U": "Kept safely",
+        "pkyWdU": "Keystore password",
+        "EBC6hj": "Local Backup",
+        "/IYLRi": "login to your Mask Cloud",
+        "RH8jSA": "Merge data to local database",
+        "QTomF0": "Merge to local",
+        "yFrxQj": "Mnemonic word",
+        "dMsM20": "Mobile",
+        "NU5uaG": "Mobile number",
+        "2fuHsY": "Mobile verification code",
+        "cXydfw": "Never share 12-word secret recovery phrase with anyone!",
+        "hXzOVo": "Next",
+        "Ns5WaC": "No backups found",
+        "7qUM2b": "Open Mask Wallet",
+        "MXOdMY": "Overwrite Backup",
+        "p2xE4C": "Overwrite current backup",
+        "GAvnvl": "Payment Password",
+        "FMK94W": "Payment password must be 6 to 20 characters in length.",
+        "0F4ogS": "Payment Password should be between 6 and 20 characters.",
+        "gC2WI+": "Persona",
+        "K5a6t1": "Persona already exists.",
+        "Iw9zA9": "Persona created successfully.",
+        "Z16qyu": "Persona Name",
+        "UjRxho": "Persona Recovery Phrase",
+        "1nMGEs": "Personas",
+        "PZmnB2": "Phone verification code",
+        "ezYNcH": "Pin Mask Network to the toolbar for easier access:",
+        "y5aRAa": "Please enter cloud backup password to download file.",
+        "qjEqVe": "Please enter the correct mnemonic phrase words, private key, or upload the correct keystore file.",
+        "+Qcnh5": "Please select the appropriate method to restore your personal data.",
+        "8FUcZ6": "Please select the correct words based on the order of the recovery phases.",
+        "WqQS22": "Please use your frequently used email account or mobile phone for backup.",
+        "CAPQ2C": "Please write down or copy these words in the correct way and store them in secure places.",
+        "DHhJ7s": "Previous",
+        "yik0Qu": "Private Key",
+        "z1Vlg/": "Public Key",
+        "TZ0npN": "ready 🚀",
+        "XC7RGa": "Recover your data",
+        "UBzbea": "Recover your wallet",
+        "P9wzG/": "Recovery",
+        "38C83c": "Recovery Phrase",
+        "lCF0wC": "Refresh",
+        "NWqhru": "Reselect",
+        "MyjAbr": "Resend",
+        "yKu/3Y": "Restore",
+        "LZyexg": "Restore backup failed, Please try again.",
+        "uM6jnS": "Restore failed",
+        "j4TRxD": "Select Address",
+        "RjF5dk": "Select the contents of the backup",
+        "JlFcis": "Send",
+        "5Dz44N": "Set Payment Password",
+        "bfNmSO": "Set payment password successfully.",
+        "00b9QG": "Set Your Payment Password",
+        "JXJlYD": "Set Your Persona Name",
+        "ps1+DX": "Set your persona name with maximum length of 24 characters",
+        "mErq7F": "Sign Up",
+        "6Uau97": "Skip",
+        "8djViz": ["Step ", ["step"], "/", ["step"]],
+        "QcVZFH": ["Step ", ["step"], "/", ["totalSteps"]],
+        "XUKicg": "Step 1/2",
+        "Z3S6Dx": "Step 1/3",
+        "HGTZAO": "Step 2/2",
+        "olEUh2": "Successful",
+        "yH/1+c": "Sure to overwrite the backups stored on Mask Cloud Service?",
+        "WmXCMa": "Switch other account",
+        "KT+NlC": "Switch other accounts",
+        "h3Vpnw": "The code is incorrect.",
+        "+omTCT": "The mnemonic has been copied, please keep it in a safe place.",
+        "AsN7HV": "The phone number is incorrect.",
+        "p8dbsR": "The two entered passwords are inconsistent.",
+        "1V6ube": "This option will overwrite the existing cloud backup with the local data, and it cannot be recovered anymore.",
+        "PFWPHC": "This QR saves your identity code, please keep it safely.",
+        "JDUDZf": "This QR saves your mnemonic, please keep it safely.",
+        "JA8K9s": "Unpacking",
+        "LcZh+r": "Unsupported data backup",
+        "VcPDSd": "Unsupported key store data",
+        "o2hD9L": "Update X.com Authorization",
+        "0C6WdO": "Upload backup",
+        "/eguJc": "Uploading",
+        "yHrk88": "Verification",
+        "ggYcg+": "Verification code sent",
+        "IW95/a": ["Verification code was sent to your ", ["type"], ". Please check your ", ["type"], "."],
+        "uSMfoN": "Verify",
+        "6XyieG": "wallet",
+        "GKzDG2": ["Wallets (", ["walletLength"], ")"],
+        "Q5GPoL": "We are pleased to inform you that the authorization update for X website has been successfully completed. You can now continue to enjoy all the features of Mask Network as usual. Thank you for your continuous support!",
+        "m74yjp": "Welcome to Mask Cloud Services",
+        "fFYJ8f": "Welcome to use Mask Network",
+        "wPzrDV": "Write Down Recovery Phrase",
+        "Uw0lAB": "Wrong words selected. Please try again!",
+        "2kjtuW": "You have successfully backed up your data.",
+        "L4OR2m": "You have successfully verified your cloud password and recovered your backup. To unify backup passwords, do you want to synchronize your cloud password as local backup password?",
+        "SX2YtS": "You’ve uploaded backup to Mask Cloud Service successfully.",
+        "d7xi4v": "Your payment password encrypts wallet data and is needed for trade confirmations and unlocking. It's securely stored on your device, and we cannot retrieve it. Please remember it.",
+        "0kr+x1": "Your Wallet is on"
+    }
+}
