--- a/packages/mask/shared-ui/locale/ja-JP.json
+++ b/packages/mask/shared-ui/locale/ja-JP.json
@@ -1,1 +1,161 @@
-{ "messages": { "3B4jmY": "データの相関値" } }
+{
+    "messages": {
+        "lKldOY": "12単語の復元フレーズは、ペルソナデータを回復するために使用されます。",
+        "6c6xyD": "アカウント",
+        "Du6bPw": "アドレス",
+        "+XyQiK": "同意",
+        "BPhVLF": "お客様の利用情報を収集し、改善に役立てます。",
+        "2jQko7": "関連アカウント",
+        "CEk7Nc": "At least 6 characters",
+        "iH8pgl": "Back",
+        "rLgPvm": "バックアップ",
+        "27uZ2B": "バックアップがダウンロードされ、ローカルに統合されました。",
+        "QrHM/A": "バックアップがダウンロードされ、ローカルに正常に統合されました。",
+        "zp7Ha3": "バックアップ失敗",
+        "GExRUL": "バックアップパスワード",
+        "NloaHG": "バックアップパスワード",
+        "fGiGY1": "クラウドにバックアップ",
+        "7Ry254": "マスククラウドサービスにバックアップ",
+        "dEgA5A": "Cancel",
+        "ShHV7X": "クラウドバックアップ",
+        "qqWcBV": "完了しました",
+        "7VpPHA": "確認",
+        "EwiD7E": "支払いパスワードを再入力",
+        "fsUPaG": "おめでとうございます！",
+        "gVfVfe": "コンタクト",
+        "xGVfLh": "続行",
+        "hYgDIe": "作成",
+        "LJkXYZ": "新規Mask IDを作成",
+        "PjBWOL": "あなたのペルソナを作成して始めましょう",
+        "WgawP2": "Creating your",
+        "Sp/me1": "データ",
+        "3B4jmY": "データの相関値",
+        "89K/8v": "マスククラウドサービスからローカルに正常にデータを統合しました。パスワードを再入力すると、バックアップを暗号化してマスククラウドサービスにアップロードできます。",
+        "oe5xh9": "復号に失敗しました。パスワードを確認してください。",
+        "DPfwMq": "完了!",
+        "1vSYsG": "バックアップをダウンロード",
+        "1+6BOG": "バックアップのダウンロード",
+        "xsX27i": "ダウンロードリンクの期限が切れています",
+        "9hg9mc": "ダウンロード中",
+        "5Sa1Ss": "メールアドレス",
+        "O3oNi5": "メールアドレス",
+        "5e22kj": "電子メール検証コード",
+        "MRIXE3": "Encrypting your",
+        "pi+hn/": ["Ethereum ", ["HD_PATH_WITHOUT_INDEX_ETHEREUM"]],
+        "Nzm8dm": "例: アリス(Alice)",
+        "cm4E8+": "Twitter での経験",
+        "J2eKUI": "ファイル",
+        "tdZPpe": "Generating your",
+        "76gPWk": "了解",
+        "oAHd4H": "正しい順番で単語を書き留めました",
+        "b5d759": "アイデンティティ",
+        "RRw7LE": "アイデンティティ ID",
+        "l3s5ri": "インポート",
+        "bapItf": "バックアップパスワードが正しくありません。",
+        "bassMa": "クラウドバックアップのパスワードが正しくありません。もう一度やり直してください。",
+        "dajsth": "キーストアのパスワードが正しくありません。",
+        "u948QG": "ニーモニックフレーズが間違っています",
+        "+uISZO": "パスワードが間違っています",
+        "pjrgRd": "IDコードが間違っています",
+        "gdnEab": "アイデンティティニーモニックが正しくありません。",
+        "acK3j2": "秘密鍵を入力してください",
+        "9iZ9fH": "メールアドレスが正しくありません。",
+        "BakBNJ": "電話番号が無効です。確認してもう一度お試しください。",
+        "I4caYo": "認証コードが無効です。",
+        "IBAx3U": "安全に保管されている",
+        "pkyWdU": "キーストアのパスワード",
+        "EBC6hj": "ローカルバックアップ",
+        "/IYLRi": "マスククラウドにログインする",
+        "RH8jSA": "ローカルデータベースにデータを統合",
+        "QTomF0": "ローカルに統合",
+        "yFrxQj": "ニーモニック単語",
+        "dMsM20": "モバイル",
+        "NU5uaG": "携帯番号",
+        "2fuHsY": "モバイル認証コード",
+        "cXydfw": "ニーモニックフレーズを保存することを忘れないでください。ウォレットにアクセスする際に必要になります。",
+        "hXzOVo": "Next",
+        "Ns5WaC": "バックアップが見つかりません",
+        "7qUM2b": "Maskウォレットを開く",
+        "MXOdMY": "バックアップを上書き",
+        "p2xE4C": "既存のバックアップを上書き",
+        "GAvnvl": "支払いパスワードの設定",
+        "FMK94W": "パスワードの長さが正しくありません。",
+        "0F4ogS": "支払いパスワードは6文字以上20文字以下で設定してください。",
+        "gC2WI+": "ペルソナ",
+        "K5a6t1": "ペルソナは既に存在します。",
+        "Iw9zA9": "正常にペルソナを作成しました",
+        "Z16qyu": "ペルソナ名",
+        "UjRxho": "ペルソナ回復フレーズ",
+        "1nMGEs": "ペルソナ",
+        "PZmnB2": "モバイル認証コード",
+        "ezYNcH": "Mask Networkをツールバーにピン留めすると、アクセスしやすくなります。",
+        "y5aRAa": "ファイルをダウンロードするには、クラウドバックアップパスワードを入力してください。",
+        "qjEqVe": "正しいニーモニックフレーズの単語、秘密キー、または正しいキーストアファイルをアップロードしてください。",
+        "+Qcnh5": "12単語の復元フレーズは、ペルソナデータを回復するために使用されます。",
+        "8FUcZ6": "ニーモニックワードを検証します",
+        "WqQS22": "バックアップには、頻繁に使用する電子メールアカウントまたは携帯電話を使用してください。",
+        "CAPQ2C": "これらの単語を正しく書き留めるか、コピーして安全な場所に保管してください。",
+        "DHhJ7s": "前の",
+        "yik0Qu": "秘密鍵",
+        "z1Vlg/": "公開キー",
+        "TZ0npN": "準備完了🚀",
+        "XC7RGa": "データを復元する",
+        "UBzbea": "ウォレットを復元する",
+        "P9wzG/": "復旧",
+        "38C83c": "復元フレーズ",
+        "lCF0wC": "更新",
+        "NWqhru": "選びなおす",
+        "MyjAbr": "再送信",
+        "yKu/3Y": "復元",
+        "LZyexg": "バックアップの復元に失敗しました。もう一度やり直してください。",
+        "uM6jnS": "復元に失敗しました",
+        "j4TRxD": "アドレスを選択する",
+        "RjF5dk": "バックアップの内容を選択します",
+        "JlFcis": "送信",
+        "5Dz44N": "支払いパスワードの設定",
+        "bfNmSO": "支払いパスワードを正常に設定しました",
+        "00b9QG": "支払いパスワードを設定",
+        "JXJlYD": "ペルソナ名を設定",
+        "ps1+DX": "あなたのペルソナ名を24文字以内で設定してください",
+        "mErq7F": "新規登録",
+        "6Uau97": "スキップ",
+        "8djViz": ["Step ", ["step"], "/", ["step"]],
+        "QcVZFH": ["Step ", ["step"], "/", ["totalSteps"]],
+        "XUKicg": "Step 1/2",
+        "Z3S6Dx": "Step 1/3",
+        "HGTZAO": "Step 2/2",
+        "olEUh2": "成功",
+        "yH/1+c": "マスククラウドサービスに保存されているバックアップを上書きしますか?",
+        "WmXCMa": "他のアカウントを切り替え",
+        "KT+NlC": "他のアカウントを切り替え",
+        "h3Vpnw": "このコードは正しくありません",
+        "+omTCT": "ニーモニックがコピーされました。安全な場所に保管してください。",
+        "AsN7HV": "電話番号が間違っています。",
+        "p8dbsR": "パスワードが一致しません。",
+        "1V6ube": "このオプションは、既存のクラウドバックアップをローカルデータで上書きし、復元することはできません。",
+        "PFWPHC": "This QR saves your identity code, please keep it safely.",
+        "JDUDZf": "このQRはニーモニックを保存します。安全に保管してください。",
+        "JA8K9s": "Unpacking",
+        "LcZh+r": "サポートされていないバックアップ",
+        "VcPDSd": "非対応のキーストアデータ",
+        "o2hD9L": "X.com 認証の更新",
+        "0C6WdO": "バックアップをアップロード",
+        "/eguJc": "アップロード中",
+        "yHrk88": "認証",
+        "ggYcg+": "認証コードを送信しました",
+        "IW95/a": ["Verification code was sent to your ", ["type"], ". Please check your ", ["type"], "."],
+        "uSMfoN": "認証",
+        "6XyieG": "ウォレット",
+        "GKzDG2": ["Wallets (", ["walletLength"], ")"],
+        "Q5GPoL": "Xウェブサイトの認証アップデートが完了しました。これでマスクネットワークの全ての機能を通常通りお楽しみいただけます。今後ともよろしくお願いいたします！",
+        "m74yjp": "マスククラウドサービスへようこそ",
+        "fFYJ8f": "Mask Networkへようこそ",
+        "wPzrDV": "復元フレーズを書きます",
+        "Uw0lAB": "間違った単語が選択されました。もう一度やり直してください！",
+        "2kjtuW": "データのバックアップに成功しました。",
+        "L4OR2m": "クラウドパスワードの認証が完了し、バックアップがアップロードされています。バックアップパスワードを統一するために、クラウドのパスワードをローカルのバックアップのパスワードとして同期するかどうかを確認してください。",
+        "SX2YtS": "マスククラウドサービスにバックアップをアップロードしました。",
+        "d7xi4v": "支払いパスワードはウォレットデータを暗号化し、取引の確認とロック解除に必要です。 お使いのデバイスに安全に保存されているため、取り戻すことはできません。覚えておいてください。",
+        "0kr+x1": "Your Wallet is on"
+    }
+}
