--- a/packages/mask/shared-ui/locale/zh-TW.json
+++ b/packages/mask/shared-ui/locale/zh-TW.json
@@ -1,1 +1,161 @@
-{ "messages": { "3B4jmY": "数据关联" } }
+{
+    "messages": {
+        "lKldOY": "请选择恢复备份的正确方法。",
+        "6c6xyD": "账户",
+        "Du6bPw": "地址",
+        "+XyQiK": "同意",
+        "BPhVLF": "允许我们收集您的使用信息以帮助我们改进。",
+        "2jQko7": "关联账户",
+        "CEk7Nc": "At least 6 characters",
+        "iH8pgl": "返回",
+        "rLgPvm": "备份",
+        "27uZ2B": "备份下载后合并到本地失败。",
+        "QrHM/A": "备份下载并成功合并到本地。",
+        "zp7Ha3": "備份失敗",
+        "GExRUL": "備份密碼",
+        "NloaHG": "備份密碼",
+        "fGiGY1": "备份到云端",
+        "7Ry254": "备份到 Mask 云服务",
+        "dEgA5A": "取消",
+        "ShHV7X": "雲端備份",
+        "qqWcBV": "已完成",
+        "7VpPHA": "確認",
+        "EwiD7E": "再次輸入支付密碼",
+        "fsUPaG": "恭喜您！",
+        "gVfVfe": "聯繫人",
+        "xGVfLh": "继续",
+        "hYgDIe": "创建",
+        "LJkXYZ": "创建新的 MASK 身份",
+        "PjBWOL": "创建您的身份以开始",
+        "WgawP2": "Creating your",
+        "Sp/me1": "数据",
+        "3B4jmY": "数据关联",
+        "89K/8v": "数据已成功从 Mask 云服务合并到本地。请重新输入密码以加密并上传备份到 Mask 云服务。",
+        "oe5xh9": "備份解密失敗，請檢查密碼",
+        "DPfwMq": "完成！",
+        "1vSYsG": "下载备份",
+        "1+6BOG": "下载备份",
+        "xsX27i": "下载链接已过期",
+        "9hg9mc": "正在下载",
+        "5Sa1Ss": "电子邮件",
+        "O3oNi5": "电子邮箱",
+        "5e22kj": "邮箱验证码",
+        "MRIXE3": "Encrypting your",
+        "pi+hn/": ["Ethereum ", ["HD_PATH_WITHOUT_INDEX_ETHEREUM"]],
+        "Nzm8dm": "示例：Alice",
+        "cm4E8+": "Twitter体验",
+        "J2eKUI": "文件",
+        "tdZPpe": "Generating your",
+        "76gPWk": "好的",
+        "oAHd4H": "我按顺序写下了所有单词",
+        "b5d759": "身份",
+        "RRw7LE": "身份助记词",
+        "l3s5ri": "輸入",
+        "bapItf": "备份密码错误。",
+        "bassMa": "云备份密码不正确，请重试。",
+        "dajsth": "Keystore 密码不正确。",
+        "u948QG": "助记词错误。",
+        "+uISZO": "密码不正确",
+        "pjrgRd": "私钥不正确",
+        "gdnEab": "助记词不正确。",
+        "acK3j2": "請輸入你的私鑰",
+        "9iZ9fH": "邮箱地址不正确。",
+        "BakBNJ": "无效的电话号码，请检查并重试。",
+        "I4caYo": "验证码错误。",
+        "IBAx3U": "确认保存",
+        "pkyWdU": "Keystore密码",
+        "EBC6hj": "本地备份",
+        "/IYLRi": "登录到您的 Mask 云",
+        "RH8jSA": "合并数据到本地数据库",
+        "QTomF0": "合并至本地数据",
+        "yFrxQj": "助记词",
+        "dMsM20": "手机",
+        "NU5uaG": "手机号码",
+        "2fuHsY": "手机验证码",
+        "cXydfw": "請不要忘記保存助記詞，您將需要這個才能訪問您的錢包。",
+        "hXzOVo": "繼續",
+        "Ns5WaC": "没有发现备份",
+        "7qUM2b": "打开一个钱包",
+        "MXOdMY": "覆盖备份",
+        "p2xE4C": "覆盖当前备份",
+        "GAvnvl": "支付密碼",
+        "FMK94W": "密碼長度不符合規定",
+        "0F4ogS": "支付密码应该介于 6 到 20 个字符之间。",
+        "gC2WI+": "角色",
+        "K5a6t1": "该身份已存在。",
+        "Iw9zA9": "創建成功",
+        "Z16qyu": "身份名称",
+        "UjRxho": "您的恢复口令",
+        "1nMGEs": "角色",
+        "PZmnB2": "验证码",
+        "ezYNcH": "将 Mask Network 固定到工具栏以便更容易访问：",
+        "y5aRAa": "请输入云备份密码以下载文件。",
+        "qjEqVe": "请输入正确的助记词词句，私钥，或上传正确的 keystore 文件。",
+        "+Qcnh5": "请选择合适的方法来恢复个人数据。",
+        "8FUcZ6": "驗證助記詞",
+        "WqQS22": "请使用您经常使用的电子邮件帐户或手机进行备份。",
+        "CAPQ2C": "请以正确的方式写下或复制这些字词，并将其存储在安全的地方。",
+        "DHhJ7s": "上一页",
+        "yik0Qu": "私钥",
+        "z1Vlg/": "公钥",
+        "TZ0npN": "准备🚀",
+        "XC7RGa": "恢复数据",
+        "UBzbea": "恢复钱包",
+        "P9wzG/": "恢復",
+        "38C83c": "身份助记词",
+        "lCF0wC": "刷新",
+        "NWqhru": "重新选择",
+        "MyjAbr": "重新傳送",
+        "yKu/3Y": "恢復",
+        "LZyexg": "恢復備份失敗，請再試一次。",
+        "uM6jnS": "恢復失敗",
+        "j4TRxD": "选择地址",
+        "RjF5dk": "选择备份的内容",
+        "JlFcis": "發送",
+        "5Dz44N": "设置支付密码",
+        "bfNmSO": "设置支付密码成功。",
+        "00b9QG": "设置支付密码",
+        "JXJlYD": "设置您的角色名称",
+        "ps1+DX": "设置您的身份名称，最大长度为24个字符",
+        "mErq7F": "注册",
+        "6Uau97": "跳过",
+        "8djViz": ["Step ", ["step"], "/", ["step"]],
+        "QcVZFH": ["Step ", ["step"], "/", ["totalSteps"]],
+        "XUKicg": "Step 1/2",
+        "Z3S6Dx": "Step 1/3",
+        "HGTZAO": "Step 2/2",
+        "olEUh2": "成功",
+        "yH/1+c": "确定要覆盖 Mask 云服务中存储的备份吗？",
+        "WmXCMa": "切换帐号",
+        "KT+NlC": "切换帐号",
+        "h3Vpnw": "验证码不正确",
+        "+omTCT": "助记符已被复制，请将其保存在一个安全地方。",
+        "AsN7HV": "通訊號碼錯誤",
+        "p8dbsR": "輸入的密碼不一致",
+        "1V6ube": "此选项将用本地数据覆盖现有的云备份，并且无法恢复。",
+        "PFWPHC": "This QR saves your identity code, please keep it safely.",
+        "JDUDZf": "这个二维码保存了你的助记词，请安全保存它。",
+        "JA8K9s": "Unpacking",
+        "LcZh+r": "不支持數據備份格式",
+        "VcPDSd": "不支持的密钥存储数据",
+        "o2hD9L": "Update X.com Authorization",
+        "0C6WdO": "上传备份",
+        "/eguJc": "正在上传",
+        "yHrk88": "确认",
+        "ggYcg+": "驗證碼已傳送",
+        "IW95/a": ["Verification code was sent to your ", ["type"], ". Please check your ", ["type"], "."],
+        "uSMfoN": "驗證",
+        "6XyieG": "钱包",
+        "GKzDG2": ["Wallets (", ["walletLength"], ")"],
+        "Q5GPoL": "We are pleased to inform you that the authorization update for X website has been successfully completed. You can now continue to enjoy all the features of Mask Network as usual. Thank you for your continuous support!",
+        "m74yjp": "欢迎使用 Mask 云服务",
+        "fFYJ8f": "欢迎来到 Mask Network！",
+        "wPzrDV": "写下助记词",
+        "Uw0lAB": "单词选择错误。请重试！",
+        "2kjtuW": "備份數據已成功",
+        "L4OR2m": "已成功驗證您的雲端備份密碼，備份正在上傳，為了備份密碼的一致，請確認您是否願意將您的雲端備份密碼設置為本地備份密碼。",
+        "SX2YtS": "您已成功上传备份到 Mask 云服务。",
+        "d7xi4v": "您的钱包数据将使用此支付密码加密，这也是交易确认和钱包解锁所必需的。",
+        "0kr+x1": "Your Wallet is on"
+    }
+}
