--- a/packages/mask/shared-ui/locale/ko-KR.json
+++ b/packages/mask/shared-ui/locale/ko-KR.json
@@ -1,1 +1,161 @@
-{ "messages": { "3B4jmY": "데이터 수정" } }
+{
+    "messages": {
+        "lKldOY": "12개 복구 문구로 페르소나 데어터를 복구할 수 있습니다.",
+        "6c6xyD": "계정",
+        "Du6bPw": "주소",
+        "+XyQiK": "동의",
+        "BPhVLF": "제품을 개선하기 위해 이용정보 수입을 허용하시길 바랍니다.",
+        "2jQko7": "관련 계정",
+        "CEk7Nc": "At least 6 characters",
+        "iH8pgl": "뒤로",
+        "rLgPvm": "백업",
+        "27uZ2B": "로컬로 백업을 다운로드하여 병합하지 못했습니다.",
+        "QrHM/A": "백업을 다운로드하여 로컬로 병합했습니다.",
+        "zp7Ha3": "백업 실패",
+        "GExRUL": "비밀번호 백업",
+        "NloaHG": "비밀번호 백업",
+        "fGiGY1": "클라우드 백업",
+        "7Ry254": "Mask Cloud Service 백업",
+        "dEgA5A": "취소",
+        "ShHV7X": "클라우드 백업",
+        "qqWcBV": "완료됨",
+        "7VpPHA": "확인",
+        "EwiD7E": "결재 비밀번호 다시 설정",
+        "fsUPaG": "축하합니다",
+        "gVfVfe": "연락처",
+        "xGVfLh": "다음",
+        "hYgDIe": "만들기",
+        "LJkXYZ": "새로운 Mask 아이디 만들기",
+        "PjBWOL": "이용하기 전에 페르소나 한번 만들어 보세요",
+        "WgawP2": "Creating your",
+        "Sp/me1": "데이터",
+        "3B4jmY": "데이터 수정",
+        "89K/8v": "데이터가 Mask Cloud Service에서 Local로 병합되었습니다. 암호를 다시 입력하여 암호화한 후 Mask Cloud Service에 백업을 업로드합니다.",
+        "oe5xh9": "해독 실패, 비밀번호를 확인하세요",
+        "DPfwMq": "완료",
+        "1vSYsG": "백업 다운로드",
+        "1+6BOG": "백업 다운로드",
+        "xsX27i": "다운로드 링크가 만료되었습니다",
+        "9hg9mc": "다운로드 중",
+        "5Sa1Ss": "이메일",
+        "O3oNi5": "이메일",
+        "5e22kj": "메일 인증번호",
+        "MRIXE3": "Encrypting your",
+        "pi+hn/": ["Ethereum ", ["HD_PATH_WITHOUT_INDEX_ETHEREUM"]],
+        "Nzm8dm": "예: Alice",
+        "cm4E8+": "트위터에서 체험하기",
+        "J2eKUI": "파일",
+        "tdZPpe": "Generating your",
+        "76gPWk": "알겠습니다",
+        "oAHd4H": "단어를 정확한 순서대로 적었습니다",
+        "b5d759": "아이덴티티",
+        "RRw7LE": "아이디",
+        "l3s5ri": "불러오기",
+        "bapItf": "잘못된 백업 비밀번호.",
+        "bassMa": "잘못된 클라우드 백업 비밀번호입니다. 다시 시도하세요.",
+        "dajsth": "잘못된 키스토어 비밀번호.",
+        "u948QG": "잘못된 니모닉 문구 단어.",
+        "+uISZO": "잘못된 비밀번호",
+        "pjrgRd": "잘못된 아이디 코드",
+        "gdnEab": "잘못된 복구 문구",
+        "acK3j2": "개인 키 입력하기",
+        "9iZ9fH": "이메일 주소가 잘못되었습니다.",
+        "BakBNJ": "무효한 전화 번호입니다. 다시 시도해 보세요.",
+        "I4caYo": "유효하지 않은 인증 코드입니다.",
+        "IBAx3U": "안전 보관",
+        "pkyWdU": "키스토어 비밀번호",
+        "EBC6hj": "로컬 백업",
+        "/IYLRi": "Mask 클라우드 로그인",
+        "RH8jSA": "데이터를 로컬 데이터베이스에 병합하기",
+        "QTomF0": "로컬로 합병하기",
+        "yFrxQj": "니모닉 단어",
+        "dMsM20": "모바일",
+        "NU5uaG": "휴대폰 번호",
+        "2fuHsY": "모바일 인증번호",
+        "cXydfw": "월렛의 자산을 보호하기 위해 니모닉 단어를 잘 저장하고 잊지 마세요.",
+        "hXzOVo": "다음",
+        "Ns5WaC": "백업 없음",
+        "7qUM2b": "Mask 월렛 열기",
+        "MXOdMY": "백업 덮어쓰기",
+        "p2xE4C": "기존 백업 덮어쓰기",
+        "GAvnvl": "결재 비밀번호",
+        "FMK94W": "비밀번호 길이가 잘못되었습니다.",
+        "0F4ogS": "결제 비밀번호는 8~20자 사이어야 합니다.",
+        "gC2WI+": "페르소나",
+        "K5a6t1": "이미 존재된 페르소나입니다.",
+        "Iw9zA9": "페르소나 생성 성공",
+        "Z16qyu": "페르소나 이름",
+        "UjRxho": "페르소나 복구 문구",
+        "1nMGEs": "나의 페르소나",
+        "PZmnB2": "Phone verification code",
+        "ezYNcH": "Mask Network를 툴바에 고정하여 보다 쉽게 액세스할 수 있습니다:",
+        "y5aRAa": "파일을 다운로드하려면 클라우드 백업 암호를 입력하세요.",
+        "qjEqVe": "정확한 니모닉 문구 단어와 개인키를 저장하가나 정확한 키스토어 파일을 업로드하세요.",
+        "+Qcnh5": "12개 복구 문구로 페르소나 데어터를 복구할 수 있습니다.",
+        "8FUcZ6": "이모닉 단어 인증",
+        "WqQS22": "자주 이용하는 이메일이나 전화번호로 백업하시길 바랍니다.",
+        "CAPQ2C": "단어를 정확한 방식으로 기입하거나 복사하고 안전한 곳에 보관하시길 바랍니다.",
+        "DHhJ7s": "이전",
+        "yik0Qu": "개인 키",
+        "z1Vlg/": "공개 키",
+        "TZ0npN": "준비 🚀",
+        "XC7RGa": "데어터 복구",
+        "UBzbea": "월렛 복구",
+        "P9wzG/": "복구",
+        "38C83c": "복구 문구",
+        "lCF0wC": "새로고침",
+        "NWqhru": "다시 선택",
+        "MyjAbr": "다시 보내기",
+        "yKu/3Y": "복원하기",
+        "LZyexg": "백업 복구 실패되었습니다. 다시 시도하세요.",
+        "uM6jnS": "복구 실패",
+        "j4TRxD": "주소 선택",
+        "RjF5dk": "백업 내용을 선택하세요.",
+        "JlFcis": "보내기",
+        "5Dz44N": "결제 비밀번호 설정",
+        "bfNmSO": "결제 비밀번호 설정 성공",
+        "00b9QG": "결제 비밀번호 설정",
+        "JXJlYD": "페르소나 이름 설정하기",
+        "ps1+DX": "최대 24자로 페로소나 이름 설정합니다",
+        "mErq7F": "가입하기",
+        "6Uau97": "넘어가기",
+        "8djViz": ["Step ", ["step"], "/", ["step"]],
+        "QcVZFH": ["Step ", ["step"], "/", ["totalSteps"]],
+        "XUKicg": "Step 1/2",
+        "Z3S6Dx": "Step 1/3",
+        "HGTZAO": "Step 2/2",
+        "olEUh2": "성공",
+        "yH/1+c": "Mask Cloud Service에 저장된 백업을 덮어쓰시겠습니까?",
+        "WmXCMa": "사용자 계정 전환",
+        "KT+NlC": "사용자 계정 전환",
+        "h3Vpnw": "코드가 잘못되었습니다.",
+        "+omTCT": "니모닉이 복사되었습니다. 안전하게 보관하시길 바랍니다.",
+        "AsN7HV": "전화번호가 잘못되었습니다.",
+        "p8dbsR": "비밀번호가 일치하지 않습니다",
+        "1V6ube": "이 옵션은 기존 클라우드 백업을 로컬 데이터로 덮어쓰므로 더 이상 복구할 수 없습니다.",
+        "PFWPHC": "This QR saves your identity code, please keep it safely.",
+        "JDUDZf": "이 QR은 니모닉을 저장하는 것이니, 안전하게 보관해주시기 바랍니다.",
+        "JA8K9s": "Unpacking",
+        "LcZh+r": "지원하지 않는 데이터 백업",
+        "VcPDSd": "지원하지 않는 키스토어 데이터",
+        "o2hD9L": "Update X.com Authorization",
+        "0C6WdO": "백업 업로드",
+        "/eguJc": "업로딩중",
+        "yHrk88": "인증",
+        "ggYcg+": "인증 코드가 발송되었습니다",
+        "IW95/a": ["Verification code was sent to your ", ["type"], ". Please check your ", ["type"], "."],
+        "uSMfoN": "인증",
+        "6XyieG": "월렛",
+        "GKzDG2": ["Wallets (", ["walletLength"], ")"],
+        "Q5GPoL": "We are pleased to inform you that the authorization update for X website has been successfully completed. You can now continue to enjoy all the features of Mask Network as usual. Thank you for your continuous support!",
+        "m74yjp": "Welcome to Mask Cloud Services",
+        "fFYJ8f": "환영합니다",
+        "wPzrDV": "복원 분구를 기입하세요",
+        "Uw0lAB": "단어를 잘못하게 선택했습니다. 다시 시도하세요!",
+        "2kjtuW": "데이터가 이미 백업되었습니다.",
+        "L4OR2m": "클라우드 비밀번호는 이미 성공적으로 승인되고 백업은 이미 업로드되었습니다. 백업 비밀번호를 통합하려면 클라우드 비밀번호를 로컬 백업 비밀번호로 동기화할지 여부를 확인하십시오.",
+        "SX2YtS": "Mask Cloud Service에 백업을 업로드했습니다.",
+        "d7xi4v": "회원님의 결제비밀번호는 월렛 데이터를 암호화한 것으로 거래확인 및 잠금해제를 위해 필요하며, 고객님의 기기에 저장되어 있어 다른 경로로 복구할 수 없습니다. 주의하시길 바랍니다.",
+        "0kr+x1": "Your Wallet is on"
+    }
+}
