fix: bridge issues (#11810)
* fix: mf-6406 network name and network fee

* fix: fixup mf-6402

* fix: mf-6415 remove unused tip icons

* fix: network node in bridge trading route

* fix: mf-6394 calc swap value

* fix: token icon

* fix: mf-6395 when passing native token

* fix: mf-6399 show best route in quote

* fix: mf-6403 bridge rate in confirm page

* fix: mf-6404 correct chain id in bridge confirm page

* fix: mf-6412 don't show stale while approving

* fix: bridge transaction status

* fix: mf-6414 mf-6411 swap and bridge

* fix: run codegen

---------

Co-authored-by: swkatmask <swkatmask@users.noreply.github.com>

--- a/packages/plugins/Trader/src/locale/en-US.json
+++ b/packages/plugins/Trader/src/locale/en-US.json
@@ -16,6 +16,7 @@
         "3uQmjD": "Average",
         "z7Fh2l": ["Base fee required: ", ["MIN_BASE_FEE"], " Gwei"],
         "J24FyN": "Bridge",
+        "bLmWH9": "Bridge anyway",
         "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
         "sX4+FS": "Bridge network fee",
         "aqop4L": "Check on Explorer",
@@ -50,6 +51,7 @@
         "y62Dys": "Network fee",
         "ileX7U": "No recent transactions",
         "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
+        "mZ04KC": "Overall Best",
         "g2UNkE": "Powered by",
         "y/kxxM": "Priority fee",
         "T3dlAs": "Quote expired. Update to receive a new quote.",
