--- a/packages/mask/shared-ui/locale/en-US.json
+++ b/packages/mask/shared-ui/locale/en-US.json
@@ -479,7 +479,7 @@
         "py6hU8": "Signature Request",
         "9KKhJV": "Signing ...",
         "nqagQ8": "Signing Message (Raw)",
-        "KRYwyc": "Signing Messsage (Text)",
+        "nUeoRs": "Signing Message (Text)",
         "QHZRmq": "Sites",
         "ZIsLZh": "Size limit: 10 MB",
         "6Uau97": "Skip",
