--- a/packages/mask/shared-ui/locale/ja-JP.json
+++ b/packages/mask/shared-ui/locale/ja-JP.json
@@ -479,7 +479,7 @@
         "py6hU8": "署名リクエスト",
         "9KKhJV": "署名中...",
         "nqagQ8": "メッセージ署名（Hex）",
-        "KRYwyc": "署名メッセージ",
+        "nUeoRs": "署名メッセージ",
         "QHZRmq": "サイト",
         "ZIsLZh": "Size limit: 10 MB",
         "6Uau97": "スキップ",
