--- a/packages/mask/shared-ui/locale/ko-KR.json
+++ b/packages/mask/shared-ui/locale/ko-KR.json
@@ -479,7 +479,7 @@
         "py6hU8": "시그너쳐 요청",
         "9KKhJV": "진행중...",
         "nqagQ8": "Signing Message (Raw)",
-        "KRYwyc": "사인 메시지",
+        "nUeoRs": "사인 메시지",
         "QHZRmq": "사이트",
         "ZIsLZh": "Size limit: 10 MB",
         "6Uau97": "넘어가기",
