--- a/packages/mask/shared-ui/locale/zh-TW.json
+++ b/packages/mask/shared-ui/locale/zh-TW.json
@@ -479,7 +479,7 @@
         "py6hU8": "签名请求",
         "9KKhJV": "正在签名...",
         "nqagQ8": "签名消息 (十六进制)",
-        "KRYwyc": "消息签名",
+        "nUeoRs": "消息签名",
         "QHZRmq": "站点",
         "ZIsLZh": "Size limit: 10 MB",
         "6Uau97": "跳過",
