--- a/packages/mask/shared-ui/locale/ko-KR.po
+++ b/packages/mask/shared-ui/locale/ko-KR.po
@@ -2225,7 +2225,7 @@ msgid "Signing Message (Raw)"
 msgstr ""
 
 #: popups/components/SignRequestInfo/index.tsx:117
-msgid "Signing Messsage (Text)"
+msgid "Signing Message (Text)"
 msgstr "사인 메시지"
 
 #: popups/pages/RequestPermission/RequestPermission.tsx:31
