fix: run codegen

--- a/packages/plugins/Trader/src/locale/en-US.json
+++ b/packages/plugins/Trader/src/locale/en-US.json
@@ -19,6 +19,7 @@
         "bLmWH9": "Bridge anyway",
         "O3Nzf+": "Bridge between this token pair are't supported at the moment.",
         "sX4+FS": "Bridge network fee",
+        "TzarJw": "Bridging",
         "aqop4L": "Check on Explorer",
         "rulocO": "Checking Approve",
         "bD8I7O": "Complete",
@@ -43,14 +44,17 @@
         "0caMy7": "History",
         "lqW7eD": "In cross-chain transactions, this fee includes the estimated network fee and the cross-chain bridge's network fee which is $0.00 (0 OP_ETH). The network fees are paid to the miners and aren't charged by our platform.\nThe actual cost may be lower\nthan estimated, and any unused funds will remain in the original address.",
         "m3pz1u": ["Insufficient ", ["symbol"], " Balance"],
+        "/2nH6X": "Make another Bridge",
         "ELQ256": "Make another Swap",
         "RhCL4z": "Max amount",
         "T3EPqL": "Max base fee",
         "HTX2HV": "Minimum received",
+        "D9za/8": "Missing dex contract address",
         "OR475H": "Network",
         "y62Dys": "Network fee",
         "ileX7U": "No recent transactions",
         "lO/vMB": "OKX DEX refers to the OKX DEX aggregator, which chooses the best route to place an order through all integrated third-party DEXs (some of them are shown below).  Note that OKX DEX derives all its liquidity from third-party liquidity pools. OKX DEX does NOT conduct any transactions directly.",
+        "UCQiqt": ["on ", ["0"]],
         "mZ04KC": "Overall Best",
         "g2UNkE": "Powered by",
         "y/kxxM": "Priority fee",
@@ -66,7 +70,10 @@
         "SYgxDf": "Slow",
         "vH2C/2": "Swap",
         "+q+Wa9": "Swap anyway",
+        "X0PXso": "Swap duration",
+        "JPHuMW": "Swapping",
         "m64f3d": "Swaps between this token pair are’t supported at the moment. You can try with third-party DApps instead.",
+        "J0Mxpc": ["The ", ["0"], " is in progress. You can check its status in History after exiting this page."],
         "Q0IFtx": "The custom amount entered may be higher than the required network fee.",
         "kPC0jM": "The swap is in progress. You can check its status in History after exiting this page.",
         "bTQliy": "This fee is used to pay miners and isn't collected by us. The actual cost may be less than estimated, and the unused fee won't be deducted from your account.",
@@ -82,7 +89,9 @@
         "g/i+bG": "Transaction rejected",
         "Re7Oex": "Transaction submitted.",
         "cFDjd3": "Transaction type",
+        "qJb6G2": "Try Again",
         "3ublvs": "Try token from different chains",
-        "XcWehA": "Update Quote"
+        "XcWehA": "Update Quote",
+        "N931rj": "Your transaction should be done in <0/>"
     }
 }
